[gd_scene load_steps=4 format=3 uid="uid://4u813rhxsdir"]

[ext_resource type="Script" uid="uid://cunvaiw3j7d5s" path="res://scenes/join_room.gd" id="1_x2utn"]
[ext_resource type="Texture2D" uid="uid://byniunpjk4ns7" path="res://assets/signup-background.png" id="1_yncvu"]
[ext_resource type="Texture2D" uid="uid://deycrmu5buc8a" path="res://assets/joinroom_button.png" id="3_e4rja"]

[node name="JoinRoom" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_x2utn")

[node name="joinScene" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 56.0
offset_right = 2017.0
offset_bottom = 1395.0
texture = ExtResource("1_yncvu")

[node name="codeInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 172.0
offset_top = 244.0
offset_right = 948.0
offset_bottom = 1087.0

[node name="joinButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1044.0
offset_top = 445.0
offset_right = 1938.0
offset_bottom = 1018.0
texture_normal = ExtResource("3_e4rja")

[node name="fullRoomNotif" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="kickedNotif" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
